# Antbot

./: .gitignore  README.md  frames_2025-09-22_16.49.47.gv  frames_2025-09-22_17.24.36.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/antbot_description/share/ament_index/resource_index/package_run_dependencies/: antbot_description
install/antbot_description/share/antbot_description/: local_setup.dsv  local_setup.sh  model.config  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/antbot_description/share/antbot_description/launch/: gz_rviz.launch.py
install/antbot_description/share/antbot_description/meshes/: omron_fixed.stl  pillar.stl  pillar_centered_origin.stl  wheel_front.stl  wheel_rear_centered_clean.stl
install/antbot_description/share/antbot_description/urdf/: antbot.urdf.xacro
install/antbot_description/share/antbot_description/urdf/sensors/: antbot_ultrasonic.xacro
install/antbot_description/share/antbot_description/worlds/: gmr_world.sdf
install/antbot_drive_controller/lib/antbot_drive_controller/: cmd_vel_to_stamped  imu_frame_relay  scan_to_range  teleop_keyboard
install/antbot_drive_controller/share/antbot_drive_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/antbot_drive_controller/share/antbot_drive_controller/config/: teleop_joy.yaml  tricycle_controller.yaml  twist_mux.yaml
install/antbot_drive_controller/share/antbot_drive_controller/launch/: bringup.launch.py  slam.launch.py  teleop_all.launch.py
install/antbot_navigation/lib/antbot_navigation/: publish_initial_pose.py
install/antbot_navigation/share/antbot_navigation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/antbot_navigation/share/antbot_navigation/cmake/: antbot_navigationConfig.cmake
install/antbot_navigation/share/antbot_navigation/launch/: filters.launch.py  imu_bridge.launch.py  localization.launch.py
log/: latest_build
src/: frames_2025-09-22_16.01.49.gv
src/antbot_description/: CMakeLists.txt  model.config  model.sdf  package.xml
src/antbot_description/launch/: display.launch.py  gz_rviz.launch.py  gz_sim.launch.py
src/antbot_description/meshes/: lidar.stl  lidar_centered_origin.stl  omron.stl  wheel_front_centered.stl  wheel_rear.stl
src/antbot_description/rviz/: antbot.rviz
src/antbot_description/scripts/: laser_frame_fix.py
src/antbot_description/urdf/: antbot.urdf.xacro
src/antbot_description/urdf/sensors/: antbot_imu.xacro  antbot_lidar.xacro
src/antbot_description/worlds/: empty.sdf
src/antbot_drive_controller/: CMakeLists.txt  cmd_vel_to_stamped.py  package.xml  setup.cfg  setup.py
src/antbot_drive_controller/antbot_drive_controller/: scan_to_range.py
src/antbot_drive_controller/config/: antbot_test_controllers.yaml  jsb.yaml  twist_mux.yaml
src/antbot_drive_controller/launch/: teleop_all.launch.py  teleop_keyboard.py
src/antbot_navigation/: CMakeLists.txt  package.xml
src/antbot_navigation/behavior_trees/: navigate_w_replanning_and_recovery_ackermann.xml
src/antbot_navigation/config/: antbot_nav2.yaml  ekf.yaml  laser_filters.yaml  mapper_params_online_async.yaml  slam_params.yaml
src/antbot_navigation/launch/: ekf.launch.py  filters.launch.py  nav2.launch.py  slam.launch.py
src/antbot_navigation/maps/: my_world.pgm  my_world.yaml
src/antbot_navigation/nodes/: scan_frame_fix.py
