<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>antbot_drive_controller</name>
  <version>0.0.1</version>
  <description>Teleop + mux + controller bringup for AntBot</description>

  <maintainer email="titlepakornza@gmail.com">pakorn</maintainer>
  <license>MIT</license>

  <!-- แพ็กเกจ Python ต้องมี buildtool นี้ -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ใช้งานกับโหนด/สคริปต์ Python และชนิดข้อความ -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>

  <!-- ros2_control / controllers ที่ใช้ตอนรัน -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>tricycle_steering_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- Teleop & Mux (คีย์บอร์ด / จอย / เลือกแหล่งคำสั่ง) -->
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <!-- (ออปชัน) สำหรับรันเทสต์ / ลินต์ -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
